--- a/templates/theleech.html
+++ b/templates/theleech.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='theleech.css') }}"> 
-    </head>
-    
-    <body>
-        <h1> This is a header</h1>
-        <button> Click 1 </button>
-        <button class="specialButton1"> Click 2</button>
-        <p> This is a paragraph</p>
-    </body>
+  <link rel="stylesheet" href="{{ url_for('static', filename='theleech.css') }}">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+
+<header>
+  <h2>Home</h2>
+</header>
+
+<section>
+  <nav>
+    <h1>
+      Navigation
+    </h1>
+    <ul>
+      <li><button><a href="/" target="_blank">Home</a></button></li>
+      <li><button><a href="/theleech">The Leech</a></button></li>
+      <li><button><a href="/songsoftheweek" target="_blank">Songs of the Week</a></button></li>
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>Li JingLiang: The Welterweight Star from XinJiang</h1>
+<p>
+  Li Jingliang (Chinese: 李景亮/born March 20, 1988) is a Chinese mixed martial artist who competes as a welterweight for the Ultimate Fighting Championship. He is also referrred to as his UFC nickname, "The Leech."
+</p>
+
+<p>
+  Originally from a small town near Tacheng in the Xinjiang UAR of Northwest China, Li competed in Chinese wrestling and trained in Sanda before moving to Beijing in 2008 in order to pursue a career in professional mixed martial arts. Li began training under the tutelage of former UFC Lightweight Zhang Tiequan.
+</p>
+  </article>
+</section>
+
+<footer>
+  <p>Copyright © 2022 Kevin Zhou. All Rights Reserved. </p>
+</footer>
+
+</body>
 </html>
