--- a/templates/theleech.html
+++ b/templates/theleech.html
@@ -9,35 +9,49 @@
 
 
 <header>
-  <h2>Home</h2>
+
+  <h2>The Leech</h2>
+  
 </header>
 
 <section>
+
   <nav>
+
     <h1>
       Navigation
     </h1>
+
     <ul>
       <li><button><a href="/" target="_blank">Home</a></button></li>
       <li><button><a href="/theleech">The Leech</a></button></li>
-      <li><button><a href="/songsoftheweek" target="_blank">Songs of the Week</a></button></li>
+      <li><button><a href="/songoftheday" target="_blank">Song of the Day</a></button></li>
     </ul>
+
   </nav>
   
   <article>
+
     <h1>Li JingLiang: The Welterweight Star from XinJiang</h1>
-<p>
+
+    <img src="https://images2.minutemediacdn.com/image/fetch/w_736,h_485,c_fill,g_auto,f_auto/https%3A%2F%2Ffansided.com%2Ffiles%2F2022%2F09%2FABC00168-850x560.jpg" alt="Li JingLiang">
+
+    <p>
   Li Jingliang (Chinese: 李景亮/born March 20, 1988) is a Chinese mixed martial artist who competes as a welterweight for the Ultimate Fighting Championship. He is also referrred to as his UFC nickname, "The Leech."
 </p>
 
 <p>
   Originally from a small town near Tacheng in the Xinjiang UAR of Northwest China, Li competed in Chinese wrestling and trained in Sanda before moving to Beijing in 2008 in order to pursue a career in professional mixed martial arts. Li began training under the tutelage of former UFC Lightweight Zhang Tiequan.
 </p>
+
   </article>
+
 </section>
 
 <footer>
+
   <p>Copyright © 2022 Kevin Zhou. All Rights Reserved. </p>
+
 </footer>
 
 </body>
