--- a/templates/home.html
+++ b/templates/home.html
@@ -9,30 +9,43 @@
 
 
 <header>
+
   <h2>Home</h2>
+
 </header>
 
 <section>
+
   <nav>
+
     <h1>
       Navigation
     </h1>
+
     <ul>
       <li><button><a href="/">Home</a></button></li>
       <li><button><a href="/theleech" target="_blank">The Leech</a></button></li>
-      <li><button><a href="/songsoftheweek" target="_blank">Songs of the Week</a></button></li>
+      <li><button><a href="/songoftheday" target="_blank">Song of the Day</a></button></li>
     </ul>
+
   </nav>
   
   <article>
+
     <h1>The FitnessGram™ Pacer Test</h1>
+
     <p>The FitnessGram™ Pacer Test is a multistage aerobic capacity test that progressively gets more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at the start. The running speed starts slowly, but gets faster each minute after you hear this signal. [beep] A single lap should be completed each time you hear this sound. [ding] Remember to run in a straight line, and run as long as possible. The second time you fail to complete a lap before the sound, your test is over. The test will begin on the word start. On your mark, get ready, start.</p>
+  
   </article>
+
 </section>
 
 <footer>
+
   <p>Copyright © 2022 Kevin Zhou. All Rights Reserved. </p>
+
 </footer>
 
 </body>
+
 </html>
